# glusterfs

./: .gitlab-ci.yml  CMakeLists.txt  configure.ac  glusterfs-api.pc  glusterfs.files  glusterfs.includes  glusterfs.spec  libgfchangelog.pc  libgfdb.pc  pthread.txt
api/src/: glfs-fops.c
libglusterfs/src/: Makefile.am  common-utils.h  defaults.c  fast-memcpy.c  fast-memcpy.h  globals.h  iobuf.c  list.h  xlator.c  xlator.h
rpc/rpc-lib/src/: rpc-transport.c  rpc-transport.h  rpcsvc.h
rpc/rpc-transport/rdma/src/: rdma.h
rpc/rpc-transport/socket/src/: socket.h
scripts/: epel.repo  install-deps.sh
tests/: env.rc  include.rc
tests/basic/ec/: ec-48-16.t  ec-common
tests/bugs/shard/: bug-shard-zerofill.c
xlators/cluster/ec/src/: Makefile  Makefile.am  Makefile.in  ec-combine.c  ec-combine.h  ec-common.c  ec-common.h  ec-data.c  ec-data.h  ec-generic.c  ec-gf.h  ec-gf.lo  ec-heal.c  ec-helpers.c  ec-inode-read.c  ec-inode-write.c  ec-method-cuda.c  ec-method-cuda.cu  ec-method-cuda.lo  ec-method.c  ec-method.h  ec-worker.h  ec.c  ec.h  ec.la  thpool.lo
xlators/features/compress/src/: cdc.h
xlators/mgmt/glusterd/src/: glusterd-volume-set.c
xlators/mount/fuse/src/: fuse-bridge.c  fuse-bridge.h
xlators/performance/: Makefile.am
xlators/performance/io-batch/: Makefile.am
xlators/performance/io-batch/src/: Makefile.am  io-batch-messages.h  io-batch.c  io-batch.h  iob-mem-types.h
xlators/performance/write-behind/src/: write-behind.c
