cmake_minimum_required(VERSION 3.3)
project(glusterfs)



set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c99")

include_directories(.)
include_directories(api/src/)
include_directories(cli/src/)
include_directories(libglusterfs/src/)
include_directories(xlators/lib/src/)
include_directories(contrib/uuid/)
include_directories(heal/src/)
include_directories(rpc/src/)
include_directories(contrib/rbtree/)

set(SOURCE_FILES
        api/examples/glfsxmp.c
        api/src/gfapi-messages.h
        api/src/glfs-fops.c
        api/src/glfs-handleops.c
        api/src/glfs-handles.h
        api/src/glfs-internal.h
        api/src/glfs-master.c
        api/src/glfs-mem-types.h
        api/src/glfs-mgmt.c
        api/src/glfs-resolve.c
        api/src/glfs.c
        api/src/glfs.h
        cli/src/cli-cmd-global.c
        cli/src/cli-cmd-misc.c
        cli/src/cli-cmd-parser.c
        cli/src/cli-cmd-peer.c
        cli/src/cli-cmd-snapshot.c
        cli/src/cli-cmd-system.c
        cli/src/cli-cmd-volume.c
        cli/src/cli-cmd.c
        cli/src/cli-cmd.h
        cli/src/cli-mem-types.h
        cli/src/cli-quotad-client.c
        cli/src/cli-quotad-client.h
        cli/src/cli-rl.c
        cli/src/cli-rpc-ops.c
        cli/src/cli-xml-output.c
        cli/src/cli.c
        cli/src/cli.h
        cli/src/input.c
        cli/src/registry.c
        contrib/argp-standalone/argp-ba.c
        contrib/argp-standalone/argp-eexst.c
        contrib/argp-standalone/argp-fmtstream.c
        contrib/argp-standalone/argp-fmtstream.h
        contrib/argp-standalone/argp-help.c
        contrib/argp-standalone/argp-namefrob.h
        contrib/argp-standalone/argp-parse.c
        contrib/argp-standalone/argp-pv.c
        contrib/argp-standalone/argp-pvh.c
        contrib/argp-standalone/argp.h
        contrib/argp-standalone/mempcpy.c
        contrib/argp-standalone/strcasecmp.c
        contrib/argp-standalone/strchrnul.c
        contrib/argp-standalone/strndup.c
        contrib/argp-standalone/vsnprintf.c
        contrib/fuse-include/fuse-misc.h
        contrib/fuse-include/fuse-mount.h
        contrib/fuse-include/fuse_kernel.h
        contrib/fuse-include/fuse_kernel_macfuse.h
        contrib/fuse-include/mount_util.h
        contrib/fuse-lib/misc.c
        contrib/fuse-lib/mount-common.c
        contrib/fuse-lib/mount-gluster-compat.h
        contrib/fuse-lib/mount.c
        contrib/fuse-util/fusermount.c
        contrib/fuse-util/mount_util.c
        contrib/libexecinfo/execinfo.c
        contrib/libexecinfo/execinfo_compat.h
        contrib/libgen/basename_r.c
        contrib/libgen/dirname_r.c
        contrib/macfuse/fuse_ioctl.h
        contrib/macfuse/fuse_param.h
        contrib/macfuse/mount_darwin.c
        contrib/mount/mntent.c
        contrib/mount/mntent_compat.h

        contrib/rbtree/rb.c
        contrib/rbtree/rb.h
        contrib/stdlib/gf_mkostemp.c
        contrib/sunrpc/xdr_sizeof.c
        contrib/timer-wheel/find_last_bit.c
        contrib/timer-wheel/timer-wheel.c
        contrib/timer-wheel/timer-wheel.h
        contrib/umountd/umountd.c
        contrib/userspace-rcu/rculist-extra.h
        contrib/uuid/clear.c
        contrib/uuid/compare.c
        contrib/uuid/copy.c
        contrib/uuid/gen_uuid.c
        contrib/uuid/gen_uuid_nt.c
        contrib/uuid/isnull.c
        contrib/uuid/pack.c
        contrib/uuid/parse.c
        contrib/uuid/tst_uuid.c
        contrib/uuid/unpack.c
        contrib/uuid/unparse.c
        contrib/uuid/uuid.h
        contrib/uuid/uuid_time.c
        contrib/uuid/uuid_types.h
        contrib/uuid/uuidd.h
        contrib/uuid/uuidP.h
        extras/benchmarking/glfs-bm.c
        extras/benchmarking/rdd.c
        extras/geo-rep/gsync-sync-gfid.c
        extras/test/ld-preload-test/ld-preload-lib.c
        extras/test/ld-preload-test/ld-preload-test.c
        extras/test/open-fd-tests.c
        extras/test/test-ffop.c
        extras/stripe-merge.c
        geo-replication/src/gsyncd.c
        geo-replication/src/procdiggy.c
        geo-replication/src/procdiggy.h
        glusterfsd/src/glusterfsd-mem-types.h
        glusterfsd/src/glusterfsd-messages.h
        glusterfsd/src/glusterfsd-mgmt.c
        glusterfsd/src/glusterfsd.c
        glusterfsd/src/glusterfsd.h
        heal/src/glfs-heal.c
        libglusterfs/src/gfdb/gfdb_data_store.c
        libglusterfs/src/gfdb/gfdb_data_store.h
        libglusterfs/src/gfdb/gfdb_data_store_types.h
        libglusterfs/src/gfdb/gfdb_mem-types.h
        libglusterfs/src/gfdb/gfdb_sqlite3.c
        libglusterfs/src/gfdb/gfdb_sqlite3.h
        libglusterfs/src/gfdb/gfdb_sqlite3_helper.c
        libglusterfs/src/gfdb/gfdb_sqlite3_helper.h
        libglusterfs/src/unittest/global_mock.c
        libglusterfs/src/unittest/log_mock.c
        libglusterfs/src/unittest/mem_pool_unittest.c
        libglusterfs/src/unittest/unittest.h
        libglusterfs/src/byte-order.h
        libglusterfs/src/call-stub.c
        libglusterfs/src/call-stub.h
        libglusterfs/src/changelog.h
        libglusterfs/src/checksum.c
        libglusterfs/src/checksum.h
        libglusterfs/src/circ-buff.c
        libglusterfs/src/circ-buff.h
        libglusterfs/src/client_t.c
        libglusterfs/src/client_t.h
        libglusterfs/src/cluster-syncop.c
        libglusterfs/src/cluster-syncop.h
        libglusterfs/src/common-utils.c
        libglusterfs/src/common-utils.h
        libglusterfs/src/compat-errno.c
        libglusterfs/src/compat-errno.h
        libglusterfs/src/compat-uuid.h
        libglusterfs/src/compat.c
        libglusterfs/src/compat.h
        libglusterfs/src/ctr-messages.h
        libglusterfs/src/ctx.c
        libglusterfs/src/daemon.c
        libglusterfs/src/daemon.h
        libglusterfs/src/defaults.c
        libglusterfs/src/defaults.h
        libglusterfs/src/dict.c
        libglusterfs/src/dict.h
        libglusterfs/src/event-epoll.c
        libglusterfs/src/event-history.c
        libglusterfs/src/event-history.h
        libglusterfs/src/event-poll.c
        libglusterfs/src/event.c
        libglusterfs/src/event.h
        libglusterfs/src/fd-lk.c
        libglusterfs/src/fd-lk.h
        libglusterfs/src/fd.c
        libglusterfs/src/fd.h
        libglusterfs/src/gf-dirent.c
        libglusterfs/src/gf-dirent.h
        libglusterfs/src/gidcache.c
        libglusterfs/src/gidcache.h
        libglusterfs/src/glfs-message-id.h
        libglusterfs/src/globals.c
        libglusterfs/src/globals.h
        libglusterfs/src/glusterfs-acl.h
        libglusterfs/src/glusterfs.h
        libglusterfs/src/graph-print.c
        libglusterfs/src/graph-utils.h
        libglusterfs/src/graph.c
        libglusterfs/src/hashfn.c
        libglusterfs/src/hashfn.h
        libglusterfs/src/iatt.h
        libglusterfs/src/inode.c
        libglusterfs/src/inode.h
        libglusterfs/src/iobuf.c
        libglusterfs/src/iobuf.h
        libglusterfs/src/latency.c
        libglusterfs/src/latency.h
        libglusterfs/src/libglusterfs-messages.h
        libglusterfs/src/list.h
        libglusterfs/src/lkowner.h
        libglusterfs/src/locking.h
        libglusterfs/src/logging.c
        libglusterfs/src/logging.h
        libglusterfs/src/lvm-defaults.h
        libglusterfs/src/mem-pool.c
        libglusterfs/src/mem-pool.h
        libglusterfs/src/mem-types.h
        libglusterfs/src/options.c
        libglusterfs/src/options.h
        libglusterfs/src/parse-utils.c
        libglusterfs/src/parse-utils.h
        libglusterfs/src/quota-common-utils.c
        libglusterfs/src/quota-common-utils.h
        libglusterfs/src/rbthash.c
        libglusterfs/src/rbthash.h
        libglusterfs/src/refcount.c
        libglusterfs/src/refcount.h
        libglusterfs/src/revision.h
        libglusterfs/src/rot-buffs.c
        libglusterfs/src/rot-buffs.h
        libglusterfs/src/run.c
        libglusterfs/src/run.h
        libglusterfs/src/stack.c
        libglusterfs/src/stack.h
        libglusterfs/src/statedump.c
        libglusterfs/src/statedump.h
        libglusterfs/src/store.c
        libglusterfs/src/store.h
        libglusterfs/src/strfd.c
        libglusterfs/src/strfd.h
        libglusterfs/src/syncop-utils.c
        libglusterfs/src/syncop-utils.h
        libglusterfs/src/syncop.c
        libglusterfs/src/syncop.h
        libglusterfs/src/syscall.c
        libglusterfs/src/syscall.h
        libglusterfs/src/template-component-messages.h
        libglusterfs/src/timer.c
        libglusterfs/src/timer.h
        libglusterfs/src/timespec.c
        libglusterfs/src/timespec.h
        libglusterfs/src/trie.c
        libglusterfs/src/trie.h
        libglusterfs/src/tw.c
        libglusterfs/src/tw.h
        libglusterfs/src/upcall-utils.h
        libglusterfs/src/xlator.c
        libglusterfs/src/xlator.h
        rpc/rpc-lib/src/auth-glusterfs.c
        rpc/rpc-lib/src/auth-null.c
        rpc/rpc-lib/src/auth-unix.c
        rpc/rpc-lib/src/protocol-common.h
        rpc/rpc-lib/src/rpc-clnt-ping.c
        rpc/rpc-lib/src/rpc-clnt-ping.h
        rpc/rpc-lib/src/rpc-clnt.c
        rpc/rpc-lib/src/rpc-clnt.h
        rpc/rpc-lib/src/rpc-drc.c
        rpc/rpc-lib/src/rpc-drc.h
        rpc/rpc-lib/src/rpc-lib-messages.h
        rpc/rpc-lib/src/rpc-transport.c
        rpc/rpc-lib/src/rpc-transport.h
        rpc/rpc-lib/src/rpcsvc-auth.c
        rpc/rpc-lib/src/rpcsvc-common.h
        rpc/rpc-lib/src/rpcsvc.c
        rpc/rpc-lib/src/rpcsvc.h
        rpc/rpc-lib/src/xdr-common.h
        rpc/rpc-lib/src/xdr-rpc.c
        rpc/rpc-lib/src/xdr-rpc.h
        rpc/rpc-lib/src/xdr-rpcclnt.c
        rpc/rpc-lib/src/xdr-rpcclnt.h
        rpc/rpc-transport/rdma/src/name.c
        rpc/rpc-transport/rdma/src/name.h
        rpc/rpc-transport/rdma/src/rdma.c
        rpc/rpc-transport/rdma/src/rdma.h
        rpc/rpc-transport/rdma/src/rpc-trans-rdma-messages.h
        rpc/rpc-transport/socket/src/name.c
        rpc/rpc-transport/socket/src/name.h
        rpc/rpc-transport/socket/src/socket-mem-types.h
        rpc/rpc-transport/socket/src/socket.c
        rpc/rpc-transport/socket/src/socket.h
        rpc/xdr/src/glusterfs3.h
        rpc/xdr/src/msg-nfs3.c
        rpc/xdr/src/msg-nfs3.h
        rpc/xdr/src/xdr-generic.c
        rpc/xdr/src/xdr-generic.h
        rpc/xdr/src/xdr-nfs3.c
        rpc/xdr/src/xdr-nfs3.h
        tests/basic/gfapi/anonymous_fd_read_write.c
        tests/basic/gfapi/libgfapi-fini-hang.c
        tests/basic/gfapi/upcall-cache-invalidate.c
        tests/basic/fops-sanity.c
        tests/basic/logchecks-messages.h
        tests/basic/logchecks.c
        tests/basic/quota.c
        tests/bitrot/br-stub.c
        tests/bugs/access-control/bug-1051896.c
        tests/bugs/core/bug-834465.c
        tests/bugs/disperse/bug-1161886.c
        tests/bugs/distribute/bug-1193636.c
        tests/bugs/distribute/bug-860663.c
        tests/bugs/fuse/bug-1126048.c
        tests/bugs/gfapi/bug-1093594.c
        tests/bugs/glusterfs/getlk_owner.c
        tests/bugs/glusterfs-server/bug-905864.c
        tests/bugs/io-cache/bug-858242.c
        tests/bugs/nfs/bug-1210338.c
        tests/bugs/protocol/bug-808400-fcntl.c
        tests/bugs/protocol/bug-808400-flock.c
        tests/bugs/replicate/bug-1250170-fsync.c
        tests/bugs/write-behind/bug-1058663.c
        tests/encryption/frag.c
        tests/utils/arequal-checksum.c
        tools/gfind_missing_files/gcrawler.c
        xlators/cluster/afr/src/afr-common.c
        xlators/cluster/afr/src/afr-dir-read.c
        xlators/cluster/afr/src/afr-dir-read.h
        xlators/cluster/afr/src/afr-dir-write.c
        xlators/cluster/afr/src/afr-dir-write.h
        xlators/cluster/afr/src/afr-inode-read.c
        xlators/cluster/afr/src/afr-inode-read.h
        xlators/cluster/afr/src/afr-inode-write.c
        xlators/cluster/afr/src/afr-inode-write.h
        xlators/cluster/afr/src/afr-lk-common.c
        xlators/cluster/afr/src/afr-mem-types.h
        xlators/cluster/afr/src/afr-messages.h
        xlators/cluster/afr/src/afr-open.c
        xlators/cluster/afr/src/afr-read-txn.c
        xlators/cluster/afr/src/afr-self-heal-common.c
        xlators/cluster/afr/src/afr-self-heal-data.c
        xlators/cluster/afr/src/afr-self-heal-entry.c
        xlators/cluster/afr/src/afr-self-heal-metadata.c
        xlators/cluster/afr/src/afr-self-heal-name.c
        xlators/cluster/afr/src/afr-self-heal.h
        xlators/cluster/afr/src/afr-self-heald.c
        xlators/cluster/afr/src/afr-self-heald.h
        xlators/cluster/afr/src/afr-transaction.c
        xlators/cluster/afr/src/afr-transaction.h
        xlators/cluster/afr/src/afr.c
        xlators/cluster/afr/src/afr.h
        xlators/cluster/afr/src/pump.c
        xlators/cluster/afr/src/pump.h
        xlators/cluster/dht/src/unittest/dht_layout_mock.c
        xlators/cluster/dht/src/unittest/dht_layout_unittest.c
        xlators/cluster/dht/src/dht-common.c
        xlators/cluster/dht/src/dht-common.h
        xlators/cluster/dht/src/dht-diskusage.c
        xlators/cluster/dht/src/dht-hashfn.c
        xlators/cluster/dht/src/dht-helper.c
        xlators/cluster/dht/src/dht-helper.h
        xlators/cluster/dht/src/dht-inode-read.c
        xlators/cluster/dht/src/dht-inode-write.c
        xlators/cluster/dht/src/dht-layout.c
        xlators/cluster/dht/src/dht-linkfile.c
        xlators/cluster/dht/src/dht-mem-types.h
        xlators/cluster/dht/src/dht-messages.h
        xlators/cluster/dht/src/dht-rebalance.c
        xlators/cluster/dht/src/dht-rename.c
        xlators/cluster/dht/src/dht-selfheal.c
        xlators/cluster/dht/src/dht-shared.c
        xlators/cluster/dht/src/dht.c
        xlators/cluster/dht/src/nufa.c
        xlators/cluster/dht/src/switch.c
        xlators/cluster/dht/src/tier.c
        xlators/cluster/dht/src/tier.h
        xlators/cluster/ec/src/ec-combine.c
        xlators/cluster/ec/src/ec-combine.h
        xlators/cluster/ec/src/ec-common.c
        xlators/cluster/ec/src/ec-common.h
        xlators/cluster/ec/src/ec-data.c
        xlators/cluster/ec/src/ec-data.h
        xlators/cluster/ec/src/ec-dir-read.c
        xlators/cluster/ec/src/ec-dir-write.c
        xlators/cluster/ec/src/ec-fops.h
        xlators/cluster/ec/src/ec-generic.c
        xlators/cluster/ec/src/ec-gf.c
        xlators/cluster/ec/src/ec-gf.h
        xlators/cluster/ec/src/ec-heal.c
        xlators/cluster/ec/src/ec-heald.c
        xlators/cluster/ec/src/ec-heald.h
        xlators/cluster/ec/src/ec-helpers.c
        xlators/cluster/ec/src/ec-helpers.h
        xlators/cluster/ec/src/ec-inode-read.c
        xlators/cluster/ec/src/ec-inode-write.c
        xlators/cluster/ec/src/ec-locks.c
        xlators/cluster/ec/src/ec-mem-types.h
        xlators/cluster/ec/src/ec-messages.h
        xlators/cluster/ec/src/ec-method.c
        xlators/cluster/ec/src/ec-method.h
        xlators/cluster/ec/src/ec-worker.h
        xlators/cluster/ec/src/ec.c
        xlators/cluster/ec/src/ec.h
        xlators/cluster/ha/src/ha-helpers.c
        xlators/cluster/ha/src/ha-mem-types.h
        xlators/cluster/ha/src/ha.c
        xlators/cluster/ha/src/ha.h
        xlators/cluster/map/src/map-helper.c
        xlators/cluster/map/src/map-mem-types.h
        xlators/cluster/map/src/map.c
        xlators/cluster/map/src/map.h
        xlators/cluster/stripe/src/stripe-helpers.c
        xlators/cluster/stripe/src/stripe-mem-types.h
        xlators/cluster/stripe/src/stripe.c
        xlators/cluster/stripe/src/stripe.h
        xlators/debug/error-gen/src/error-gen-mem-types.h
        xlators/debug/error-gen/src/error-gen.c
        xlators/debug/error-gen/src/error-gen.h
        xlators/debug/io-stats/src/io-stats-mem-types.h
        xlators/debug/io-stats/src/io-stats.c
        xlators/debug/trace/src/trace-mem-types.h
        xlators/debug/trace/src/trace.c
        xlators/debug/trace/src/trace.h
        xlators/encryption/crypt/src/atom.c
        xlators/encryption/crypt/src/crypt-common.h
        xlators/encryption/crypt/src/crypt-mem-types.h
        xlators/encryption/crypt/src/crypt.c
        xlators/encryption/crypt/src/crypt.h
        xlators/encryption/crypt/src/data.c
        xlators/encryption/crypt/src/keys.c
        xlators/encryption/crypt/src/metadata.c
        xlators/encryption/crypt/src/metadata.h
        xlators/encryption/rot-13/src/rot-13.c
        xlators/encryption/rot-13/src/rot-13.h
        xlators/features/arbiter/src/arbiter-mem-types.h
        xlators/features/arbiter/src/arbiter.c
        xlators/features/arbiter/src/arbiter.h
        xlators/features/barrier/src/barrier-mem-types.h
        xlators/features/barrier/src/barrier.c
        xlators/features/barrier/src/barrier.h
        xlators/features/bit-rot/src/bitd/bit-rot-bitd-messages.h
        xlators/features/bit-rot/src/bitd/bit-rot-scrub.c
        xlators/features/bit-rot/src/bitd/bit-rot-scrub.h
        xlators/features/bit-rot/src/bitd/bit-rot-ssm.c
        xlators/features/bit-rot/src/bitd/bit-rot-ssm.h
        xlators/features/bit-rot/src/bitd/bit-rot-tbf.c
        xlators/features/bit-rot/src/bitd/bit-rot-tbf.h
        xlators/features/bit-rot/src/bitd/bit-rot.c
        xlators/features/bit-rot/src/bitd/bit-rot.h
        xlators/features/bit-rot/src/stub/bit-rot-common.h
        xlators/features/bit-rot/src/stub/bit-rot-object-version.h
        xlators/features/bit-rot/src/stub/bit-rot-stub-mem-types.h
        xlators/features/bit-rot/src/stub/bit-rot-stub-messages.h
        xlators/features/bit-rot/src/stub/bit-rot-stub.c
        xlators/features/bit-rot/src/stub/bit-rot-stub.h
        xlators/features/changetimerecorder/src/changetimerecorder.c
        xlators/features/changetimerecorder/src/changetimerecorder.h
        xlators/features/changetimerecorder/src/ctr-helper.c
        xlators/features/changetimerecorder/src/ctr-helper.h
        xlators/features/changetimerecorder/src/ctr-xlator-ctx.c
        xlators/features/changetimerecorder/src/ctr-xlator-ctx.h
        xlators/features/changetimerecorder/src/ctr_mem_types.h
        xlators/features/compress/src/cdc-helper.c
        xlators/features/compress/src/cdc-mem-types.h
        xlators/features/compress/src/cdc.c
        xlators/features/compress/src/cdc.h
        xlators/features/filter/src/filter-mem-types.h
        xlators/features/filter/src/filter.c
        xlators/features/ganesha/src/ganesha-mem-types.h
        xlators/features/ganesha/src/ganesha.c
        xlators/features/ganesha/src/ganesha.h
        xlators/features/gfid-access/src/gfid-access-mem-types.h
        xlators/features/gfid-access/src/gfid-access.c
        xlators/features/gfid-access/src/gfid-access.h
        xlators/features/glupy/src/glupy.c
        xlators/features/glupy/src/glupy.h
        xlators/features/index/src/index-mem-types.h
        xlators/features/index/src/index.c
        xlators/features/index/src/index.h
        xlators/features/locks/src/clear.c
        xlators/features/locks/src/clear.h
        xlators/features/locks/src/common.c
        xlators/features/locks/src/common.h
        xlators/features/locks/src/entrylk.c
        xlators/features/locks/src/inodelk.c
        xlators/features/locks/src/locks-mem-types.h
        xlators/features/locks/src/locks.h
        xlators/features/locks/src/posix.c
        xlators/features/locks/src/reservelk.c
        xlators/features/locks/tests/unit-test.c
        xlators/features/mac-compat/src/mac-compat.c
        xlators/features/mac-compat/src/mac-compat.h
        xlators/features/marker/src/marker-common.c
        xlators/features/marker/src/marker-common.h
        xlators/features/marker/src/marker-mem-types.h
        xlators/features/marker/src/marker-quota-helper.c
        xlators/features/marker/src/marker-quota-helper.h
        xlators/features/marker/src/marker-quota.c
        xlators/features/marker/src/marker-quota.h
        xlators/features/marker/src/marker.c
        xlators/features/marker/src/marker.h
        xlators/features/path-convertor/src/path-mem-types.h
        xlators/features/path-convertor/src/path.c
        xlators/features/protect/src/prot_client.c
        xlators/features/protect/src/prot_dht.c
        xlators/features/protect/src/prot_server.c
        xlators/features/quiesce/src/quiesce-mem-types.h
        xlators/features/quiesce/src/quiesce.c
        xlators/features/quiesce/src/quiesce.h
        xlators/features/quota/src/quota-enforcer-client.c
        xlators/features/quota/src/quota-mem-types.h
        xlators/features/quota/src/quota-messages.h
        xlators/features/quota/src/quota.c
        xlators/features/quota/src/quota.h
        xlators/features/quota/src/quotad-aggregator.c
        xlators/features/quota/src/quotad-aggregator.h
        xlators/features/quota/src/quotad-helpers.c
        xlators/features/quota/src/quotad-helpers.h
        xlators/features/quota/src/quotad.c
        xlators/features/read-only/src/read-only-common.c
        xlators/features/read-only/src/read-only-common.h
        xlators/features/read-only/src/read-only-mem-types.h
        xlators/features/read-only/src/read-only.c
        xlators/features/read-only/src/read-only.h
        xlators/features/read-only/src/worm.c
        xlators/features/shard/src/shard-mem-types.h
        xlators/features/shard/src/shard.c
        xlators/features/shard/src/shard.h
        xlators/features/snapview-client/src/snapview-client-mem-types.h
        xlators/features/snapview-client/src/snapview-client.c
        xlators/features/snapview-client/src/snapview-client.h
        xlators/features/snapview-server/src/snapview-server-helpers.c
        xlators/features/snapview-server/src/snapview-server-mem-types.h
        xlators/features/snapview-server/src/snapview-server-mgmt.c
        xlators/features/snapview-server/src/snapview-server.c
        xlators/features/snapview-server/src/snapview-server.h
        xlators/features/trash/src/trash-mem-types.h
        xlators/features/trash/src/trash.c
        xlators/features/trash/src/trash.h
        xlators/features/upcall/src/upcall-cache-invalidation.h
        xlators/features/upcall/src/upcall-internal.c
        xlators/features/upcall/src/upcall-mem-types.h
        xlators/features/upcall/src/upcall-messages.h
        xlators/features/upcall/src/upcall.c
        xlators/features/upcall/src/upcall.h
        xlators/lib/src/libxlator.c
        xlators/lib/src/libxlator.h
        xlators/meta/src/active-link.c
        xlators/meta/src/cmdline-file.c
        xlators/meta/src/frames-file.c
        xlators/meta/src/graph-dir.c
        xlators/meta/src/graphs-dir.c
        xlators/meta/src/history-file.c
        xlators/meta/src/logfile-link.c
        xlators/meta/src/logging-dir.c
        xlators/meta/src/loglevel-file.c
        xlators/meta/src/mallinfo-file.c
        xlators/meta/src/measure-file.c
        xlators/meta/src/meminfo-file.c
        xlators/meta/src/meta-defaults.c
        xlators/meta/src/meta-helpers.c
        xlators/meta/src/meta-hooks.h
        xlators/meta/src/meta-mem-types.h
        xlators/meta/src/meta.c
        xlators/meta/src/meta.h
        xlators/meta/src/name-file.c
        xlators/meta/src/option-file.c
        xlators/meta/src/options-dir.c
        xlators/meta/src/private-file.c
        xlators/meta/src/process_uuid-file.c
        xlators/meta/src/profile-file.c
        xlators/meta/src/root-dir.c
        xlators/meta/src/subvolume-link.c
        xlators/meta/src/subvolumes-dir.c
        xlators/meta/src/top-link.c
        xlators/meta/src/type-file.c
        xlators/meta/src/version-file.c
        xlators/meta/src/view-dir.c
        xlators/meta/src/volfile-file.c
        xlators/meta/src/xlator-dir.c
        xlators/mgmt/glusterd/src/glusterd-bitd-svc.c
        xlators/mgmt/glusterd/src/glusterd-bitd-svc.h
        xlators/mgmt/glusterd/src/glusterd-bitrot.c
        xlators/mgmt/glusterd/src/glusterd-brick-ops.c
        xlators/mgmt/glusterd/src/glusterd-conn-helper.c
        xlators/mgmt/glusterd/src/glusterd-conn-helper.h
        xlators/mgmt/glusterd/src/glusterd-conn-mgmt.c
        xlators/mgmt/glusterd/src/glusterd-conn-mgmt.h
        xlators/mgmt/glusterd/src/glusterd-errno.h
        xlators/mgmt/glusterd/src/glusterd-ganesha.c
        xlators/mgmt/glusterd/src/glusterd-geo-rep.c
        xlators/mgmt/glusterd/src/glusterd-geo-rep.h
        xlators/mgmt/glusterd/src/glusterd-handler.c
        xlators/mgmt/glusterd/src/glusterd-handshake.c
        xlators/mgmt/glusterd/src/glusterd-hooks.c
        xlators/mgmt/glusterd/src/glusterd-hooks.h
        xlators/mgmt/glusterd/src/glusterd-locks.c
        xlators/mgmt/glusterd/src/glusterd-locks.h
        xlators/mgmt/glusterd/src/glusterd-log-ops.c
        xlators/mgmt/glusterd/src/glusterd-mem-types.h
        xlators/mgmt/glusterd/src/glusterd-messages.h
        xlators/mgmt/glusterd/src/glusterd-mgmt-handler.c
        xlators/mgmt/glusterd/src/glusterd-mgmt.c
        xlators/mgmt/glusterd/src/glusterd-mgmt.h
        xlators/mgmt/glusterd/src/glusterd-mountbroker.c
        xlators/mgmt/glusterd/src/glusterd-mountbroker.h
        xlators/mgmt/glusterd/src/glusterd-nfs-svc.c
        xlators/mgmt/glusterd/src/glusterd-nfs-svc.h
        xlators/mgmt/glusterd/src/glusterd-op-sm.c
        xlators/mgmt/glusterd/src/glusterd-op-sm.h
        xlators/mgmt/glusterd/src/glusterd-peer-utils.c
        xlators/mgmt/glusterd/src/glusterd-peer-utils.h
        xlators/mgmt/glusterd/src/glusterd-pmap.c
        xlators/mgmt/glusterd/src/glusterd-pmap.h
        xlators/mgmt/glusterd/src/glusterd-proc-mgmt.c
        xlators/mgmt/glusterd/src/glusterd-proc-mgmt.h
        xlators/mgmt/glusterd/src/glusterd-quota.c
        xlators/mgmt/glusterd/src/glusterd-quotad-svc.c
        xlators/mgmt/glusterd/src/glusterd-quotad-svc.h
        xlators/mgmt/glusterd/src/glusterd-rcu.h
        xlators/mgmt/glusterd/src/glusterd-rebalance.c
        xlators/mgmt/glusterd/src/glusterd-replace-brick.c
        xlators/mgmt/glusterd/src/glusterd-rpc-ops.c
        xlators/mgmt/glusterd/src/glusterd-scrub-svc.c
        xlators/mgmt/glusterd/src/glusterd-scrub-svc.h
        xlators/mgmt/glusterd/src/glusterd-server-quorum.c
        xlators/mgmt/glusterd/src/glusterd-server-quorum.h
        xlators/mgmt/glusterd/src/glusterd-shd-svc.c
        xlators/mgmt/glusterd/src/glusterd-shd-svc.h
        xlators/mgmt/glusterd/src/glusterd-sm.c
        xlators/mgmt/glusterd/src/glusterd-sm.h
        xlators/mgmt/glusterd/src/glusterd-snapd-svc-helper.c
        xlators/mgmt/glusterd/src/glusterd-snapd-svc-helper.h
        xlators/mgmt/glusterd/src/glusterd-snapd-svc.c
        xlators/mgmt/glusterd/src/glusterd-snapd-svc.h
        xlators/mgmt/glusterd/src/glusterd-snapshot-utils.c
        xlators/mgmt/glusterd/src/glusterd-snapshot-utils.h
        xlators/mgmt/glusterd/src/glusterd-snapshot.c
        xlators/mgmt/glusterd/src/glusterd-statedump.c
        xlators/mgmt/glusterd/src/glusterd-statedump.h
        xlators/mgmt/glusterd/src/glusterd-store.c
        xlators/mgmt/glusterd/src/glusterd-store.h
        xlators/mgmt/glusterd/src/glusterd-svc-helper.c
        xlators/mgmt/glusterd/src/glusterd-svc-helper.h
        xlators/mgmt/glusterd/src/glusterd-svc-mgmt.c
        xlators/mgmt/glusterd/src/glusterd-svc-mgmt.h
        xlators/mgmt/glusterd/src/glusterd-syncop.c
        xlators/mgmt/glusterd/src/glusterd-syncop.h
        xlators/mgmt/glusterd/src/glusterd-utils.c
        xlators/mgmt/glusterd/src/glusterd-utils.h
        xlators/mgmt/glusterd/src/glusterd-volgen.c
        xlators/mgmt/glusterd/src/glusterd-volgen.h
        xlators/mgmt/glusterd/src/glusterd-volume-ops.c
        xlators/mgmt/glusterd/src/glusterd-volume-set.c
        xlators/mgmt/glusterd/src/glusterd.c
        xlators/mgmt/glusterd/src/glusterd.h
        xlators/mount/fuse/src/fuse-bridge.c
        xlators/mount/fuse/src/fuse-bridge.h
        xlators/mount/fuse/src/fuse-helpers.c
        xlators/mount/fuse/src/fuse-mem-types.h
        xlators/mount/fuse/src/fuse-resolve.c
        xlators/nfs/server/src/acl3.c
        xlators/nfs/server/src/acl3.h
        xlators/nfs/server/src/auth-cache.c
        xlators/nfs/server/src/auth-cache.h
        xlators/nfs/server/src/exports.c
        xlators/nfs/server/src/exports.h
        xlators/nfs/server/src/mount3-auth.c
        xlators/nfs/server/src/mount3-auth.h
        xlators/nfs/server/src/mount3.c
        xlators/nfs/server/src/mount3.h
        xlators/nfs/server/src/mount3udp_svc.c
        xlators/nfs/server/src/netgroups.c
        xlators/nfs/server/src/netgroups.h
        xlators/nfs/server/src/nfs-common.c
        xlators/nfs/server/src/nfs-common.h
        xlators/nfs/server/src/nfs-fops.c
        xlators/nfs/server/src/nfs-fops.h
        xlators/nfs/server/src/nfs-generics.c
        xlators/nfs/server/src/nfs-generics.h
        xlators/nfs/server/src/nfs-inodes.c
        xlators/nfs/server/src/nfs-inodes.h
        xlators/nfs/server/src/nfs-mem-types.h
        xlators/nfs/server/src/nfs-messages.h
        xlators/nfs/server/src/nfs.c
        xlators/nfs/server/src/nfs.h
        xlators/nfs/server/src/nfs3-fh.c
        xlators/nfs/server/src/nfs3-fh.h
        xlators/nfs/server/src/nfs3-helpers.c
        xlators/nfs/server/src/nfs3-helpers.h
        xlators/nfs/server/src/nfs3.c
        xlators/nfs/server/src/nfs3.h
        xlators/nfs/server/src/nlm4.c
        xlators/nfs/server/src/nlm4.h
        xlators/nfs/server/src/nlmcbk_svc.c
        xlators/performance/io-cache/src/io-cache-messages.h
        xlators/performance/io-cache/src/io-cache.c
        xlators/performance/io-cache/src/io-cache.h
        xlators/performance/io-cache/src/ioc-inode.c
        xlators/performance/io-cache/src/ioc-mem-types.h
        xlators/performance/io-cache/src/page.c
        xlators/performance/io-threads/src/io-threads-messages.h
        xlators/performance/io-threads/src/io-threads.c
        xlators/performance/io-threads/src/io-threads.h
        xlators/performance/io-threads/src/iot-mem-types.h
        xlators/performance/md-cache/src/md-cache-mem-types.h
        xlators/performance/md-cache/src/md-cache-messages.h
        xlators/performance/md-cache/src/md-cache.c
        xlators/performance/open-behind/src/open-behind-mem-types.h
        xlators/performance/open-behind/src/open-behind-messages.h
        xlators/performance/open-behind/src/open-behind.c
        xlators/performance/quick-read/src/quick-read-mem-types.h
        xlators/performance/quick-read/src/quick-read-messages.h
        xlators/performance/quick-read/src/quick-read.c
        xlators/performance/quick-read/src/quick-read.h
        xlators/performance/read-ahead/src/page.c
        xlators/performance/read-ahead/src/read-ahead-mem-types.h
        xlators/performance/read-ahead/src/read-ahead-messages.h
        xlators/performance/read-ahead/src/read-ahead.c
        xlators/performance/read-ahead/src/read-ahead.h
        xlators/performance/readdir-ahead/src/readdir-ahead-mem-types.h
        xlators/performance/readdir-ahead/src/readdir-ahead-messages.h
        xlators/performance/readdir-ahead/src/readdir-ahead.c
        xlators/performance/readdir-ahead/src/readdir-ahead.h
        xlators/performance/symlink-cache/src/symlink-cache-messages.h
        xlators/performance/symlink-cache/src/symlink-cache.c
        xlators/performance/write-behind/src/write-behind-mem-types.h
        xlators/performance/write-behind/src/write-behind-messages.h
        xlators/performance/write-behind/src/write-behind.c
        xlators/playground/template/src/template.c
        xlators/playground/template/src/template.h
        xlators/protocol/auth/addr/src/addr.c
        xlators/protocol/auth/login/src/login.c
        xlators/protocol/client/src/client-callback.c
        xlators/protocol/client/src/client-handshake.c
        xlators/protocol/client/src/client-helpers.c
        xlators/protocol/client/src/client-lk.c
        xlators/protocol/client/src/client-mem-types.h
        xlators/protocol/client/src/client-messages.h
        xlators/protocol/client/src/client-rpc-fops.c
        xlators/protocol/client/src/client.c
        xlators/protocol/client/src/client.h
        xlators/protocol/server/src/authenticate.c
        xlators/protocol/server/src/authenticate.h
        xlators/protocol/server/src/server-handshake.c
        xlators/protocol/server/src/server-helpers.c
        xlators/protocol/server/src/server-helpers.h
        xlators/protocol/server/src/server-mem-types.h
        xlators/protocol/server/src/server-messages.h
        xlators/protocol/server/src/server-resolve.c
        xlators/protocol/server/src/server-rpc-fops.c
        xlators/protocol/server/src/server.c
        xlators/protocol/server/src/server.h
        xlators/storage/bd/src/bd-aio.c
        xlators/storage/bd/src/bd-aio.h
        xlators/storage/bd/src/bd-helper.c
        xlators/storage/bd/src/bd-mem-types.h
        xlators/storage/bd/src/bd.c
        xlators/storage/bd/src/bd.h
        xlators/storage/posix/src/posix-aio.c
        xlators/storage/posix/src/posix-aio.h
        xlators/storage/posix/src/posix-handle.c
        xlators/storage/posix/src/posix-handle.h
        xlators/storage/posix/src/posix-helpers.c
        xlators/storage/posix/src/posix-mem-types.h
        xlators/storage/posix/src/posix-messages.h
        xlators/storage/posix/src/posix.c
        xlators/storage/posix/src/posix.h
        xlators/system/posix-acl/src/posix-acl-mem-types.h
        xlators/system/posix-acl/src/posix-acl-xattr.c
        xlators/system/posix-acl/src/posix-acl-xattr.h
        xlators/system/posix-acl/src/posix-acl.c
        xlators/system/posix-acl/src/posix-acl.h libglusterfs/src/fast-memcpy.h xlators/performance/io-batch/src/io-batch.c xlators/performance/io-batch/src/io-batch.h xlators/performance/io-batch/src/sorted-list.h xlators/performance/io-batch/src/iob-mem-types.h xlators/performance/io-batch/src/io-batch-messages.h)

add_executable(glusterfs ${SOURCE_FILES})